--- a/PubSubClient/res/values/strings.xml
+++ b/PubSubClient/res/values/strings.xml
@@ -5,5 +5,15 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_register_client">RegisterClient</string>
+    <string name="sensors">Sensor Data Required:</string>
+    <string name="from">From:</string>
+    <string name="to">To:</string>
+    <string name="expiryTime">Expiry Time:</string>
+    <string name="location">Location:</string>
+    <string name="radius">Radius (in metres):</string>
+    <string name="activity">Activity:</string>
+    <string name="frequency">Frequency:</string>
+    <string name="noDevices">Device Count:</string>
+    <string name="publish">Publish Query</string>
 
 </resources>
