--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="gyro">Gyroscope</string>
     <string name="gps">GPS</string>
     <string name="rot">Rotation Vector</string>
+    <string name="subscribe">Update Subscription</string>
+    <string name="pref_user_profile">Subscription Topics</string>
     <string-array name="activity_options">
         <item>Don\'t Care</item>
         <item>On Foot</item>
