Added code delete account
Creates account on the XMPP server and sends a message to the server JID
containing the list of sensors supported
In order to delete an account, sends a message to the server JID and
then deletes the account from the XMPP server

--- a/PubSubClient/res/values/strings.xml
+++ b/PubSubClient/res/values/strings.xml
@@ -36,5 +36,6 @@
         <item>Exact</item>
      
     </string-array>
+     <string name="acc_settings">Account Settings</string>
 
 </resources>
