--- a/PubSubClient/res/values/strings.xml
+++ b/PubSubClient/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="acc">Accelerometer</string>
     <string name="gyro">Gyroscope</string>
     <string name="gps">GPS</string>
+    <string name="uploadFile">Upload File</string>
     <string name="rot">Rotation Vector</string>
     <string name="subscribe">Update Subscription</string>
     <string name="pref_user_profile">Subscription Topics</string>
